# strands-live

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  strands_live_main.py
examples/: custom_tool_handler.py
src/: __init__.py  audio_streamer.py  bedrock_streamer.py  cli.py  speech_agent.py  strands_tool_handler.py  tool_handler.py  tool_handler_base.py
src/strands_live/: __init__.py  audio_streamer.py  bedrock_streamer.py  cli.py  context_builder.py  gemini_live_streamer.py  speech_agent.py  strands_tool_handler.py  tool_handler.py  tool_handler_base.py
src/strands_live/tools/: tasks.py  use_llm.py
tests/: __init__.py  test_audio_streamer.py  test_bedrock_streamer.py  test_cli.py  test_speech_agent.py  test_strands_tool_handler.py  test_tool_handler.py  test_tool_handler_base.py  test_tool_handler_config.py  test_tool_handler_integration.py
tests/integration/: test_cli_integration.py
